# bsoid

./: .gitmodules  CMakeLists.txt
config/: Compiler.cmake  Externals.cmake
include/bsoid/: CMakeLists.txt  ShaderPaths.hpp.in
include/bsoid/fields/: ImplicitField.hpp  Sphere.hpp  Torus.hpp
include/bsoid/models/: Models.hpp
include/bsoid/operators/: Blend.hpp  CMakeLists.txt  Intersection.hpp  Transform.hpp  Union.hpp
include/bsoid/polygonizer/: Bsoid.hpp  CMakeLists.txt  Hash.hpp  Lattice.hpp  MarchingCubes.hpp  Tables.hpp  Voxel.hpp  uint128_t.hpp
include/bsoid/tree/: BlobTree.hpp
include/bsoid/visualizer/: ModelView.hpp  ModelVisualizer.hpp
shader/: CMakeLists.txt
shader/bsoid/global/: LayoutLocations.glsl  UniformMatrices.glsl
shader/bsoid/visualizer/: CMakeLists.txt  Mesh.fs.glsl  Mesh.gs.glsl  Mesh.vs.glsl  Wireframe.fs.glsl  Wireframe.vs.glsl
source/: CMakeLists.txt  main.cpp
source/bsoid/models/: Models.cpp
source/bsoid/polygonizer/: Bsoid.cpp  Lattice.cpp  MarchingCubes.cpp
source/bsoid/tree/: BlobTree.cpp  Node.cpp
source/bsoid/visualizer/: ModelView.cpp  ModelVisualizer.cpp
