set(BSOID_SHADER_TOP_LIST
    )

add_subdirectory("${BSOID_SHADER_ROOT}/bsoid/global")
add_subdirectory("${BSOID_SHADER_ROOT}/bsoid/visualizer")

set(BSOID_SHADER_TOP_GROUP ${BSOID_SHADER_TOP_LIST} PARENT_SCOPE)
set(BSOID_SHADER_GLOBAL_GROUP ${BSOID_SHADER_GLOBAL_LIST} PARENT_SCOPE)
set(BSOID_SHADER_VISUALIZER_GROUP ${BSOID_SHADER_VISUALIZER_LIST} PARENT_SCOPE)

set(BSOID_SHADER_LIST
    ${BSOID_SHADER_TOP_LIST}
    ${BSOID_SHADER_GLOBAL_LIST}
    ${BSOID_SHADER_VISUALIZER_LIST}
    PARENT_SCOPE)
